--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link  href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" as="font" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./src/img/env/env-2.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite</title>
+    <title>Forest</title>
   </head>
   <body>
     <div id="app"></div>
